//
// Copyright 2024 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "buf/validate/validate.proto";
import "controlplane/v1/response_messages.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service OrganizationService {
  rpc Create(OrganizationServiceCreateRequest) returns (OrganizationServiceCreateResponse);
  // List members in the organization
  rpc ListMemberships(OrganizationServiceListMembershipsRequest) returns (OrganizationServiceListMembershipsResponse);
  // Delete member from the organization
  // Currently the currentUser can not delete himself from this endpoint
  // for that she needs to use the UserService endpoint instead
  rpc DeleteMembership(OrganizationServiceDeleteMembershipRequest) returns (OrganizationServiceDeleteMembershipResponse);
  rpc UpdateMembership(OrganizationServiceUpdateMembershipRequest) returns (OrganizationServiceUpdateMembershipResponse);
}

message OrganizationServiceListMembershipsRequest {}

message OrganizationServiceListMembershipsResponse {
  repeated OrgMembershipItem result = 1;
}

message OrganizationServiceDeleteMembershipRequest {
  string membership_id = 1 [(buf.validate.field).string.uuid = true];
}

message OrganizationServiceDeleteMembershipResponse {}

message OrganizationServiceUpdateMembershipRequest {
  string membership_id = 1 [(buf.validate.field).string.uuid = true];
  MembershipRole role = 2 [(buf.validate.field).enum.defined_only = true];
}

message OrganizationServiceUpdateMembershipResponse {
  OrgMembershipItem result = 1;
}

message OrganizationServiceCreateRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
}

message OrganizationServiceCreateResponse {
  OrgItem result = 1;
}
